--- a/SureService/package.json
+++ b/SureService/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.20.0",
     "@ionic-native/geolocation": "^4.20.0",
+    "@ionic-native/header-color": "^4.20.0",
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
     "@ionic/storage": "2.2.0",
@@ -30,6 +31,7 @@
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-headercolor": "^1.0.0",
     "firebase": "^7.4.0",
     "install": "^0.13.0",
     "ionic": "^5.4.6",
@@ -63,7 +65,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-headercolor": {}
     },
     "platforms": [
       "android",
